--- a/styles.css
+++ b/styles.css
@@ -1,42 +1,85 @@
-table {
+* {
+    box-sizing: border-box;
+}
+
+body {
+    margin: 0 auto;
+    padding: 20px 0;
+    min-height: 100%;
     width: 100%;
-    border-collapse: collapse;
-    margin-top: 20px;
+    min-width: 320px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: #978990;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 600;
+    ;
+
+}
+
+table {
+    width: 1000px;
+    border-spacing: 5px;
 }
 
 th,
 td {
     border: none;
-    padding: 10px;
+    padding: 15px;
     text-align: left;
-}
-
-th {
     background-color: #F5F5F5;
+    cursor: pointer;
 }
 
-/* Стили для подпунктов */
+
+.heading {
+    text-align: center;
+}
+
+.current {
+    background-color: #EDF8FF;
+}
+
 .sub-item td {
     padding-left: 30px;
     font-size: 0.9em;
-    color: #555;
+    cursor: unset;
 }
 
-/* Стиль для строки аккордеона с графиком */
 .accordion-content {
     display: none;
 }
 
+.accordion-content td {
+    background-color: #ffffff;
+}
+
 .accordion-content.expanded {
     display: table-row;
-    background-color: #f9f9f9;
+    background-color: transparent;
 }
 
 thead tr {
     position: relative;
 }
 
-.change {
-    position: absolute;
-    
+.current,
+.yesterday,
+.weekly {
+    text-align: center;
+}
+
+.yesterday {
+    display: flex;
+    flex-flow: row nowrap;
+    gap: 15px;
+    justify-content: center;
+}
+
+.sub-item .current,
+.sub-item .yesterday,
+.sub-item .weekly {
+    padding-left: unset;
 }
