--- a/styles.css
+++ b/styles.css
@@ -15,12 +15,12 @@ body {
     color: #978990;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 600;
-    ;
-
 }
 
 table {
-    width: 1000px;
+    min-width: 320px;
+    width: fit-content;
+    max-width: 1200px;
     border-spacing: 5px;
 }
 
